src/objects/Apttus_Revenue2__Agreement_Revenue_Schedule__c.object
<CustomObject>
    <description>Holds a revenue schedule for an agreement</description>
    <fields>
        <fullName>Apttus_Revenue2__Actual_Amount__c</fullName>
        <description>Actual amount</description>
        <inlineHelpText>Actual amount</inlineHelpText>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Actual_Units2__c</fullName>
        <description>Actual units</description>
        <inlineHelpText>Actual units</inlineHelpText>
        <label>Actual Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Actual_Units__c</fullName>
        <description>Actual units</description>
        <inlineHelpText>Actual units</inlineHelpText>
        <label>Actual Units (Old)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement fee</description>
        <inlineHelpText>Associated agreement fee</inlineHelpText>
        <label>Agreement Fee</label>
        <referenceTo>Apttus_Revenue2__Agreement_Fee__c</referenceTo>
        <relationshipLabel>Agreement Revenue Schedules</relationshipLabel>
        <relationshipName>Agreement_Revenue_Schedules_F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Prepay__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement prepay</description>
        <inlineHelpText>Associated agreement prepay</inlineHelpText>
        <label>Agreement Prepay</label>
        <referenceTo>Apttus_Revenue2__Agreement_Prepay__c</referenceTo>
        <relationshipLabel>Agreement Revenue Schedules</relationshipLabel>
        <relationshipName>Agreement_Revenue_Schedules_P</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Revenue_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement revenue adjustment</description>
        <inlineHelpText>Associated agreement revenue adjustment</inlineHelpText>
        <label>Agreement Revenue Adjustment</label>
        <referenceTo>Apttus_Revenue2__Agreement_Revenue_Adjustment_Schedule__c</referenceTo>
        <relationshipLabel>Agreement Revenue Schedules</relationshipLabel>
        <relationshipName>Agreement_Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement_Trueup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated agreement trueup</description>
        <inlineHelpText>Associated agreement trueup</inlineHelpText>
        <label>Agreement Trueup</label>
        <referenceTo>Apttus_Revenue2__Agreement_Trueup__c</referenceTo>
        <relationshipLabel>Agreement Revenue Schedules</relationshipLabel>
        <relationshipName>Agreement_Revenue_Schedules_T</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Agreement__c</fullName>
        <description>Associated agreement</description>
        <inlineHelpText>Associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Revenue Schedules</relationshipLabel>
        <relationshipName>Agreement_Revenue_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Annual_Average_Rate__c</fullName>
        <description>Annual average exchange rate</description>
        <label>Annual Average Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Budget_Amount__c</fullName>
        <description>Budget amount</description>
        <inlineHelpText>Budget amount</inlineHelpText>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Budget_Recognized_Revenue__c</fullName>
        <description>Budgeted recognized revenue for the period</description>
        <inlineHelpText>Budgeted recognized revenue for the period</inlineHelpText>
        <label>Budget Recognized Revenue</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Budget_Units__c</fullName>
        <description>Budget units</description>
        <inlineHelpText>Budget units</inlineHelpText>
        <label>Budget Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Comments__c</fullName>
        <description>Memo text</description>
        <inlineHelpText>Memo text</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Deferred_Balance_Amount__c</fullName>
        <description>Actual deferred balance amount</description>
        <inlineHelpText>Actual deferred balance amount</inlineHelpText>
        <label>Actual Deferred Balance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Amount__c</fullName>
        <description>Forecast amount</description>
        <inlineHelpText>Forecast amount</inlineHelpText>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Recognized_Revenue__c</fullName>
        <description>Forecast recognized revenue for the period</description>
        <inlineHelpText>Forecast recognized revenue for the period</inlineHelpText>
        <label>Forecast Recognized Revenue</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Units__c</fullName>
        <description>Forecast units</description>
        <inlineHelpText>Forecast units</inlineHelpText>
        <label>Forecast Units</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Invoice_Date__c</fullName>
        <description>Invoice date</description>
        <formula>IF( LEN( Apttus_Revenue2__Agreement_Prepay__c ) &gt; 0, Apttus_Revenue2__Agreement_Prepay__r.Apttus_Revenue2__Invoice_Date__c, IF( LEN( Apttus_Revenue2__Agreement_Trueup__c ) &gt; 0, Apttus_Revenue2__Agreement_Trueup__r.Apttus_Revenue2__Invoice_Date__c , IF( LEN( Apttus_Revenue2__Agreement_Fee__c ) &gt; 0, Apttus_Revenue2__Agreement_Fee__r.Apttus_Revenue2__Invoice_Date__c , NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invoice date</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Invoice_Number__c</fullName>
        <description>Invoice number</description>
        <formula>IF( LEN( Apttus_Revenue2__Agreement_Prepay__c ) &gt; 0, Apttus_Revenue2__Agreement_Prepay__r.Apttus_Revenue2__Invoice_Number__c, IF( LEN( Apttus_Revenue2__Agreement_Trueup__c ) &gt; 0, Apttus_Revenue2__Agreement_Trueup__r.Apttus_Revenue2__Invoice_Number__c , IF( LEN( Apttus_Revenue2__Agreement_Fee__c ) &gt; 0, Apttus_Revenue2__Agreement_Fee__r.Apttus_Revenue2__Invoice_Number__c , NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invoice number</inlineHelpText>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Period_Average_Rate__c</fullName>
        <description>Period average exchange rate</description>
        <label>Period Average Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Period_Date__c</fullName>
        <description>Revenue period date</description>
        <inlineHelpText>Revenue period date</inlineHelpText>
        <label>Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Period_End_Rate__c</fullName>
        <description>Period end exchange rate</description>
        <label>Period End Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Period_Number__c</fullName>
        <description>Revenue period number</description>
        <inlineHelpText>Revenue period number</inlineHelpText>
        <label>Period Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Quarter_Average_Rate__c</fullName>
        <description>Quarter average exchange rate</description>
        <label>Quarter Average Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Recognized_Revenue__c</fullName>
        <description>Actual revenue recognized for the period</description>
        <inlineHelpText>Actual revenue recognized for the period</inlineHelpText>
        <label>Actual Recognized Revenue</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RevRec_Rule__c</fullName>
        <description>Revenue recognition rule</description>
        <formula>IF( LEN( Apttus_Revenue2__Agreement_Prepay__c ) &gt; 0, TEXT(Apttus_Revenue2__Agreement_Prepay__r.Apttus_Revenue2__RevRec_Rule__c), IF( LEN( Apttus_Revenue2__Agreement_Trueup__c ) &gt; 0, TEXT(Apttus_Revenue2__Agreement_Trueup__r.Apttus_Revenue2__RevRec_Rule__c) , IF( LEN( Apttus_Revenue2__Agreement_Fee__c ) &gt; 0, TEXT(Apttus_Revenue2__Agreement_Fee__r.Apttus_Revenue2__RevRec_Rule__c) , NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Revenue recognition rule</inlineHelpText>
        <label>RevRec Rule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RevRec_Source__c</fullName>
        <description>Revenue recognition source</description>
        <label>RevRec Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prepay</fullName>
                </value>
                <value>
                    <fullName>Trueup</fullName>
                </value>
                <value>
                    <fullName>Fee</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RevenueRunResultId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the Revenue Run Result created for the Revenue Run responsible for generating this Revenue Schedule.</description>
        <label>Revenue Run Result</label>
        <referenceTo>Apttus_Revenue2__RevenueRunResult__c</referenceTo>
        <relationshipLabel>Agreement Revenue Schedules</relationshipLabel>
        <relationshipName>AgreementRevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Revenue_Subtype__c</fullName>
        <description>Revenue subtype</description>
        <formula>IF( LEN( Apttus_Revenue2__Agreement_Prepay__c ) &gt; 0, TEXT(Apttus_Revenue2__Agreement_Prepay__r.Apttus_Revenue2__Revenue_Subtype__c), IF( LEN( Apttus_Revenue2__Agreement_Trueup__c ) &gt; 0, TEXT(Apttus_Revenue2__Agreement_Trueup__r.Apttus_Revenue2__Revenue_Subtype__c) , IF( LEN( Apttus_Revenue2__Agreement_Fee__c ) &gt; 0, TEXT(Apttus_Revenue2__Agreement_Fee__r.Apttus_Revenue2__Revenue_Subtype__c) , IF( LEN( Apttus_Revenue2__Agreement_Revenue_Adjustment__c ) &gt; 0, TEXT(Apttus_Revenue2__Agreement_Revenue_Adjustment__r.Apttus_Revenue2__Revenue_Subtype__c) , NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Revenue subtype</inlineHelpText>
        <label>Revenue Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Revenue_Type__c</fullName>
        <description>Revenue type</description>
        <formula>IF( LEN( Apttus_Revenue2__Agreement_Prepay__c ) &gt; 0, TEXT(Apttus_Revenue2__Agreement_Prepay__r.Apttus_Revenue2__Revenue_Type__c), IF( LEN( Apttus_Revenue2__Agreement_Trueup__c ) &gt; 0, TEXT(Apttus_Revenue2__Agreement_Trueup__r.Apttus_Revenue2__Revenue_Type__c) , IF( LEN( Apttus_Revenue2__Agreement_Fee__c ) &gt; 0, TEXT(Apttus_Revenue2__Agreement_Fee__r.Apttus_Revenue2__Revenue_Type__c) , IF( LEN( Apttus_Revenue2__Agreement_Revenue_Adjustment__c ) &gt; 0, TEXT(Apttus_Revenue2__Agreement_Revenue_Adjustment__r.Apttus_Revenue2__Revenue_Type__c) , NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Revenue type</inlineHelpText>
        <label>Revenue Type</label>
        <type>Text</type>
    </fields>
    <label>Agreement Revenue Schedule</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Agreement Revenue Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Revenue Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>